infra/networking/envoy-gateway/network-policies/network-policy-allow-egress-to-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-cert-manager
  namespace: envoy-gateway-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cert-manager
      ports:
        - protocol: TCP
          port: 9402  # cert-manager API
        - protocol: TCP
          port: 443   # cert-manager webhook
