infra/networking/envoy-gateway/network-policies/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: envoy-gateway-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
